--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,6 +1,9 @@
 /*------ Header/logo ------*/
-
-
+@media only screen and (max-device-width: 480px) {
+		.header {
+			width:100%;
+		}
+	}
 .header {
 	padding: 10px;
 	text-align: center;
