--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,7 +1,7 @@
 /*------ Header/logo ------*/
 @media only screen and (max-device-width: 480px) {
-		.header {
-			width:100%;
+		.logo {
+			width:70%;
 		}
 	}
 .header {
