--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -185,11 +185,11 @@ hr {
 	.logo .desktop {
 		display: none;
 	}
+	.topnav {
+		display:none;
+	}
 	.header {
 		height: 80px;
 		width:100%;
-	}
-	.card {
-		justify-content: space-around;
 	}
 }
