--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -44,7 +44,9 @@
 	text-transform: uppercase;
 	letter-spacing:2px;
 }
-
+.topnav_mobile {
+	display: none;
+}
 .topnav_mobile {
 	height:100%;
 	display: block;
