--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -190,8 +190,11 @@ hr {
 
 /*------ Styling for mobile devices ------*/
 
-
-@media (max-width: 600px) {
+@viewport {
+  width: device-width ;
+  zoom: 1.0 ;
+}
+@media (max-width: 825px) {
 	.logo .mobile {
 		display: block;
 	}
