--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -51,6 +51,11 @@
 	margin-right: 5%;
 }
 
+.topnav_mobile a {
+	display:block;
+}
+
+
 .topnav a:hover {
 	background-color: #000000;
 	color: #FFFFFF;
