--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -56,7 +56,12 @@
 	display:block;
 	text-align: center;
 	color:#FFFFFF;
-	text-transform: capitalize;
+	text-transform: uppercase;
+	letter-spacing: 1em;
+	text-decoration: none;
+	font-weight: bold;
+
+
 }
 
 
