--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -57,7 +57,7 @@
 	text-align: center;
 	color:#FFFFFF;
 	text-transform: uppercase;
-	letter-spacing: 1em;
+	letter-spacing: 2px;
 	text-decoration: none;
 	font-weight: bold;
 
